force-app/main/default/objects/Message__c/fields/Campania__c.field-meta.xml
<CustomField>
    <fullName>Campania__c</fullName>
    <label>Campania</label>
    <referenceTo>Campania__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>