force-app/main/default/objects/Message__c/fields/CantRejected__c.field-meta.xml
<CustomField>
    <fullName>CantRejected__c</fullName>
    <label>CantRejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>