force-app/main/default/objects/Message__c/fields/CantResponses__c.field-meta.xml
<CustomField>
    <fullName>CantResponses__c</fullName>
    <label>CantResponses</label>
    <summaryForeignKey>Response__c.Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>