force-app/main/default/objects/Message__c/fields/CantSuccess__c.field-meta.xml
<CustomField>
    <fullName>CantSuccess__c</fullName>
    <label>CantSuccess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>