force-app/main/default/objects/Message__c/fields/ImpXPersona__c.field-meta.xml
<CustomField>
    <fullName>ImpXPersona__c</fullName>
    <formula>CantSuccess__c  / TotalsSent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImpXPersona</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>