force-app/main/default/objects/Message__c/fields/Invalid_phones__c.field-meta.xml
<CustomField>
    <fullName>Invalid_phones__c</fullName>
    <label>Invalid phones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>