force-app/main/default/objects/Message__c/fields/MC_Token_Id__c.field-meta.xml
<CustomField>
    <fullName>MC_Token_Id__c</fullName>
    <label>MC Token Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>