force-app/main/default/objects/Message__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <defaultValue>&quot;undefined data extension&quot;</defaultValue>
    <label>Receiver</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>