force-app/main/default/objects/Message__c/fields/Receiver_id__c.field-meta.xml
<CustomField>
    <fullName>Receiver_id__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Receiver_id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>