force-app/main/default/objects/Message__c/fields/SendDateTime__c.field-meta.xml
<CustomField>
    <fullName>SendDateTime__c</fullName>
    <label>SendDateTime</label>
    <type>DateTime</type>
</CustomField>