force-app/main/default/objects/Message__c/fields/TotalsAudience__c.field-meta.xml
<CustomField>
    <fullName>TotalsAudience__c</fullName>
    <label>TotalsAudience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>