force-app/main/default/objects/Message__c/fields/TotalsSent__c.field-meta.xml
<CustomField>
    <fullName>TotalsSent__c</fullName>
    <label>TotalsSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>