force-app/main/default/objects/Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campania__c</columns>
    <columns>Body__c</columns>
    <columns>Sender__c</columns>
    <columns>Receiver__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>